--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,5 +21,5 @@ serde = "1"
 serde_json = "1"
 base64 = "0.21"
 url = "2.5"
-reqwest = "0.12"
+reqwest = { version = "^0.12", default-features = false, features = ["rustls-tls", "rustls-tls-native-roots"] }
 chrono = "0.4"
